update for icon spacing issue
git-svn-id: https://plugins.svn.wordpress.org/easy-social-icons/trunk@622162 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/cnss.css
+++ b/css/cnss.css
@@ -23,6 +23,6 @@ table.cnss-social-icon tr td a img, table.cnss-social-icon tr td a:hover img, ta
 table.cnss-social-icon tr td a img:hover, table.cnss-social-icon tr td a:hover img{
 	max-width:100% !important;	
 }
-table.cnss-social-icon tr td img{
+/*table.cnss-social-icon tr td img{
 	margin-right:4px;
-}
+}*/
